[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://addons/gdleapmotion/scenes/Leap_Motion_with_collisions.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tray.tscn" type="PackedScene" id=3]
[ext_resource path="res://tile.tscn" type="PackedScene" id=5]

[sub_resource type="SphereMesh" id=1]
radius = 0.05
height = 0.1

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Leap_Motion" parent="." instance=ExtResource( 2 )]
hmd_to_leap_motion = Transform( -1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 0, 0, -0.08 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.51128, 0.859413, 0, -0.859413, 0.51128, 0.0166826, 0.799352, 0.215881 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 2.42861, 0 )
directional_shadow_max_distance = 200.0

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="Quit" type="Button" parent="."]
margin_right = 101.0
margin_bottom = 32.0
text = "Quit"

[node name="FPS" type="Label" parent="."]
margin_left = 112.0
margin_top = 4.0
margin_right = 168.0
margin_bottom = 28.0
text = "FPS"

[node name="Tray" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2149, 0.699616 )

[node name="tile" parent="Tray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.101421, 0, -0.802588 )
mode = 1

[node name="tile2" parent="Tray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.048694, 0, -0.800877 )
mode = 1

[node name="tile3" parent="Tray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00270581, 0, -0.801954 )
mode = 1

[node name="tile4" parent="Tray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0544904, 0.000655606, -0.803081 )
mode = 1

[node name="tile5" parent="Tray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.105289, 0, -0.802391 )
mode = 1
[connection signal="about_to_remove_hand" from="Leap_Motion" to="." method="_on_Leap_Motion_about_to_remove_hand"]
[connection signal="new_hand" from="Leap_Motion" to="." method="_on_Leap_Motion_new_hand"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
